# amicpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
cmake/: amicppConfig.cmake.in
docs/: Doxyfile.in
examples/: async_client.cpp  basic_client.cpp  sync_client.cpp
include/amicpp/: ami_client.hpp  ami_message.hpp  ami_session.hpp  amicpp.hpp  tcp_client.hpp
src/: ami_client.cpp  ami_message.cpp  ami_session.cpp  tcp_client.cpp
